# roundingutils

./: LICENSE  README.md  pyproject.toml
src/: roundingutils.py
src/roundingutils/: __init__.py  _rounder.py  pyproject.toml
tests/: additional_doctests  additional_doctests.md  test_rounder.py
