[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roundingutils"
version = "0.0.1"
authors = [
  { name="Graham Gill", email="graham.gill@gmail.com" },
]
description = "Bring rounding into one place"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/grahamgill/roundingutils"
Issues = "https://github.com/grahamgill/roundingutils/issues"